--- a/06_m03_01_lab_jupyter_launch_site_location.ipynb
+++ b/06_m03_01_lab_jupyter_launch_site_location.ipynb
@@ -493,11 +493,7 @@
       "cell_type": "code",
       "source": "# Create a `folium.PolyLine` object using the coastline coordinates and launch site coordinate\ncoordinates = [[launch_site_lat, launch_site_lon], [coastline_lat, coastline_lon]]\nlines=folium.PolyLine(locations=coordinates, weight=1)\nsite_map.add_child(lines)",
       "metadata": {
-        "trusted": true,
-        "collapsed": true,
-        "jupyter": {
-          "outputs_hidden": true
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -600,7 +596,7 @@
     },
     {
       "cell_type": "code",
-      "source": "coordinates1 = [[launch_site_lat, launch_site_lon], [city_lat, city_long]]\nlines1=folium.PolyLine(locations=coordinates1, weight=1)\nsite_map.add_child(lines1)",
+      "source": "coordinates1 = [[launch_site_lat, launch_site_lon], [city_lat, city_long]]\nlines1=folium.PolyLine(locations=coordinates1, weight=1)\nsite_map.add_child(lines1)\nsite_map.save(\"map_with_markers.html\")\nsite_map",
       "metadata": {
         "trusted": true
       },
