--- a/04_jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/04_jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -66,21 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting sqlalchemy==1.3.9\n",
-      "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m69.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
-      "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp37-cp37m-linux_x86_64.whl size=1159121 sha256=15b076eae0e69e6c60c2247287c54bcb433e8d07ba03d65482214e93c501c9d7\n",
-      "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/03/71/13/010faf12246f72dc76b4150e6e599d13a85b4435e06fb9e51f\n",
-      "Successfully built sqlalchemy\n",
-      "Installing collected packages: sqlalchemy\n",
-      "  Attempting uninstall: sqlalchemy\n",
-      "    Found existing installation: SQLAlchemy 1.3.24\n",
-      "    Uninstalling SQLAlchemy-1.3.24:\n",
-      "      Successfully uninstalled SQLAlchemy-1.3.24\n",
-      "Successfully installed sqlalchemy-1.3.9\n"
+      "Requirement already satisfied: sqlalchemy==1.3.9 in /home/jupyterlab/conda/envs/python/lib/python3.7/site-packages (1.3.9)\n"
      ]
     }
    ],
@@ -177,8 +163,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jupyterlab/conda/envs/python/lib/python3.7/site-packages/pandas/core/generic.py:2882: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  both result in 0.1234 being formatted as 0.12.\n"
+      "/home/jupyterlab/conda/envs/python/lib/python3.7/site-packages/pandas/core/generic.py:2615: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "  method=method,\n"
      ]
     }
    ],
@@ -207,18 +193,10 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) table SPACEXTABLE already exists\n",
+      "[SQL: create table SPACEXTABLE as select * from SPACEXTBL where Date is not null]\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -246,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -288,7 +266,7 @@
        "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -413,7 +391,7 @@
        " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -460,22 +438,22 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>48213</td>\n",
+       "            <td>45596</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(48213,)]"
+       "[(45596,)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql select sum(PAYLOAD_MASS__KG_) from SPACEXTABLE where Customer like '%NASA (CRS)%'"
+    "%sql select sum(PAYLOAD_MASS__KG_) from SPACEXTABLE where Customer = 'NASA (CRS)'"
    ]
   },
   {
@@ -492,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -525,7 +503,7 @@
        "[(2928.4,)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -581,7 +559,7 @@
        "[('2015-12-22',)]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -643,7 +621,7 @@
        "[('F9 FT B1022',), ('F9 FT B1026',), ('F9 FT  B1021.2',), ('F9 FT  B1031.2',)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -685,27 +663,44 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>Count(Mission_Outcome)</th>\n",
+       "            <th>Mission_Outcome</th>\n",
+       "            <th>Total</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>101</td>\n",
+       "            <td>Failure (in flight)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success</td>\n",
+       "            <td>98</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success (payload status unclear)</td>\n",
+       "            <td>1</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(101,)]"
+       "[('Failure (in flight)', 1),\n",
+       " ('Success', 98),\n",
+       " ('Success ', 1),\n",
+       " ('Success (payload status unclear)', 1)]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql select Count(Mission_Outcome) from SPACEXTABLE "
+    "%sql select Mission_Outcome, Count(*) as Total from SPACEXTABLE group by Mission_Outcome"
    ]
   },
   {
@@ -721,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -741,70 +736,83 @@
        "    <thead>\n",
        "        <tr>\n",
        "            <th>Booster_Version</th>\n",
+       "            <th>PAYLOAD_MASS__KG_</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1048.4</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1049.4</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1051.3</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1056.4</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1048.5</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1051.4</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1049.5</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1060.2 </td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1058.3 </td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1051.6</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1060.3</td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>F9 B5 B1049.7 </td>\n",
+       "            <td>15600</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('F9 B5 B1048.4',),\n",
-       " ('F9 B5 B1049.4',),\n",
-       " ('F9 B5 B1051.3',),\n",
-       " ('F9 B5 B1056.4',),\n",
-       " ('F9 B5 B1048.5',),\n",
-       " ('F9 B5 B1051.4',),\n",
-       " ('F9 B5 B1049.5',),\n",
-       " ('F9 B5 B1060.2 ',),\n",
-       " ('F9 B5 B1058.3 ',),\n",
-       " ('F9 B5 B1051.6',),\n",
-       " ('F9 B5 B1060.3',),\n",
-       " ('F9 B5 B1049.7 ',)]"
+       "[('F9 B5 B1048.4', 15600),\n",
+       " ('F9 B5 B1049.4', 15600),\n",
+       " ('F9 B5 B1051.3', 15600),\n",
+       " ('F9 B5 B1056.4', 15600),\n",
+       " ('F9 B5 B1048.5', 15600),\n",
+       " ('F9 B5 B1051.4', 15600),\n",
+       " ('F9 B5 B1049.5', 15600),\n",
+       " ('F9 B5 B1060.2 ', 15600),\n",
+       " ('F9 B5 B1058.3 ', 15600),\n",
+       " ('F9 B5 B1051.6', 15600),\n",
+       " ('F9 B5 B1060.3', 15600),\n",
+       " ('F9 B5 B1049.7 ', 15600)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql select Booster_Version from SPACEXTABLE where PAYLOAD_MASS__KG_ = (select max(PAYLOAD_MASS__KG_) from SPACEXTABLE)"
+    "%sql select Booster_Version, PAYLOAD_MASS__KG_ from SPACEXTABLE where PAYLOAD_MASS__KG_ = (select max(PAYLOAD_MASS__KG_) from SPACEXTABLE)"
    ]
   },
   {
@@ -821,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -867,7 +875,7 @@
        " ('April', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40')]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -950,7 +958,7 @@
        "[('Failure (drone ship)', 5), ('Success (ground pad)', 3)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
